<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
                android:paddingEnd="10dp"
                android:longClickable="false"
                android:ems="10"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius = "20dp"/>

            <!--Forgot Password-->
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/lavender"
                android:textSize="16sp" />

            <com.developer.gbuttons.GoogleSignInButton
                android:id="@+id/googleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google_sign_in"
                app:isDarkTheme = "true"
                android:background="@drawable/btn_google_signin_dark_focus"
                android:layout_gravity="center"
                android:paddingStart="60dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <!--Not yet registered? Sign Up-->
            <TextView
                android:id="@+id/signUpRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="@string/not_yet_registered_sign_up"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>