<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/country"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/cases"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvCases"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_cases"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvTodayCases"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/deaths"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvDeaths"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_deaths"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvTodayDeaths"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvRecovered"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvActive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvCritical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <!--Make piechart-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <org.eazegraph.lib.charts.BarChart
                android:id="@+id/barchart1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:layout_weight="2"
                android:paddingStart="-5dp"
                android:paddingEnd="-10dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>